# constellation

./: go.sum
bootstrapper/internal/kubernetes/k8sapi/: kubeadm_config.go
cli/internal/cloudcmd/: tfvars.go
cli/internal/cmd/: verify.go
cli/internal/state/: state.go  state_doc.go
cli/internal/terraform/: BUILD.bazel  terraform_test.go  variables.go
hack/: go.sum
image/measured-boot/cmd/: BUILD.bazel
image/system/: variants.bzl
image/upload/: pack.sh
internal/atls/: atls.go
internal/attestation/aws/nitrotpm/: validator_test.go
internal/attestation/choose/: BUILD.bazel  choose.go
internal/attestation/gcp/es/: BUILD.bazel  validator.go  validator_test.go
internal/attestation/generic/: BUILD.bazel  certchain.go  generic.go  issuer.go  validator.go  variant.go
internal/attestation/measurements/: measurements_enterprise.go  measurements_oss.go
internal/attestation/measurements/measurement-generator/: generate.go
internal/attestation/tdx/: issuer.go  tdx.go  validator.go
internal/attestation/variant/: variant.go
internal/attestation/vtpm/: attestation.go  attestation_test.go
internal/config/: config.go  config_doc.go  gcp.go
internal/constellation/: applyinit_test.go
internal/grpc/atlscredentials/: atlscredentials_test.go
internal/sigstore/: verify.go
joinservice/internal/watcher/: validator.go
terraform-provider-constellation/internal/provider/: attestation_data_source.go
terraform/infrastructure/azure/: main.tf
terraform/infrastructure/gcp/: .terraform.lock.hcl  main.tf
terraform/infrastructure/iam/gcp/: .terraform.lock.hcl  (+1 more)
(+5 files in other folders)
